implement card counts
